@startuml

    class Alumno{
        -nombre: String
        -apellido: String
        -legajo: String
        -materiasAprobadas : List<Materia>

    }

    class Materia {
        -nombre : String
        -correlativas: List<Materia>
    }

    class Inscripcion {
        - alumno : Alumno
        - materias : List<Materia>
        + aprobada() : Boolean
    }

    Alumno "1" o-- "*" Materia : materias
    Inscripcion "1" --> "1" Alumno : alumno
    Inscripcion "1" --> "*" Materia : materias
    Materia "1" --> "*" Materia : materias

@enduml